# SequenceAligner

./: ..gitignoore.swp  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  setup_script.sh
src/: alignment.cpp  alignment.h  config.h.in  mapper.cpp  minimizer.cpp  minimizer.h  minimizer_binary.cpp  minimizer_binary.h  utility.cpp  utility.h
test/: alignmentTest.cpp  gtest.cpp
